--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,8 +45,10 @@
   .product .product__installments {
     margin: 0px; }
   .product .product__cart-btn {
+    align-items: center;
     border: 1px solid #d8dbe0;
     background: none;
+    display: flex;
     font-size: 1.25em;
     font-weight: bold;
     justify-content: space-around;
@@ -63,7 +65,6 @@
       .product .product__cart-btn:hover .product__cart-btn__icon, .product .product__cart-btn:focus .product__cart-btn__icon {
         color: #ff6403; }
   .product .product__cart-btn-container {
-    align-items: center;
     background: #fff;
     border: 1px solid #d8dbe0;
     border-top: none;
